# GasProperties

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Chemical_base/: Gas_c_b.cpp  Gas_c_b.h  Gas_comp_arr.cpp  Gas_comp_arr.h  Gas_comp_array.cpp  Gas_comp_array.h  Gas_component.cpp  Gas_component.h  Gas_const.h
GUI/: Main_window.cpp  Main_window.h  Main_window.ui
Gas_calculation/: Density.cpp  Density.h  Factor_z.cpp  Factor_z.h  Gas_calculation.cpp  Gas_calculation.h  Mass_heat_burning_20.cpp  Mass_heat_burning_20.h  Molar_heat_burning_20.cpp  Molar_heat_burning_20.h  Molar_mass.cpp  Molar_mass.h  Volume_heat_burning_20.cpp  Volume_heat_burning_20.h  Wobbe_number.cpp  Wobbe_number.h
